[package]
name = "DIDShield"
version = "0.1.0"
edition = "2018"

[dependencies]
curve25519-dalek = "4.1"
rand = "0.8"
sha2 = "0.10"
lazy_static = "1.4"
form_urlencoded = { version = "1.2", features = ["alloc"] }

[dev-dependencies]
criterion = "0.4"
hex = "0.4"
vrf = { path = "vrf-rs" }
did-key = { path = "did-key.rs" }
libsignal-protocol = { path = "lib/libsignal/rust/protocol" }
futures-util = "0.3"
ark-ff = "0.5"
ark-ec = "0.5"
ark-serialize = { version = "0.5", features = ["derive"] }
ark-poly = "0.5"
ark-std = "0.5"
ark-relations = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["snark"] }
ark-groth16 = "0.5"
ark-bls12-381 = { version = "0.5", features = ["curve"] }
ark-mnt4-298 = { version = "0.5", features = ["curve"] }
ark-mnt6-298 = "0.5"

[[bench]]
name = "vrf"
harness = false

[[bench]]
name = "layer1"
harness = false

[[bench]]
name = "layer2"
harness = false

[[bench]]
name = "system-setup"
harness = false

[[bench]]
name = "cred-issue"
harness = false

[[bench]]
name = "app-issue"
harness = false

